@@ -72,6 +72,11 @@ home.input.new.link = "Add new Link"
 home.input.search.found = "Results found."
 home.last.added = "Last added"
 
+view.nav.all.tags = "Tags"
+view.nav.all.categories = "Categories"
+view.nav.back.home = "back home"
+view.nav.random = "Random link"
+
 view.name = "Name"
 view.new.name = "New name"
 view.deletion = "Deletion"
@@ -82,9 +87,11 @@ view.image.of.link = "Image from provided link"
 view.image.link = "Image Link"
 view.categories = "Categories"
 view.category = "Category"
+view.category.topcombination = "Top category combinations"
 view.tag.help = "Enter a new one or select an existing from the suggested and press enter."
 view.tag = "Tag"
 view.tags = "Tags"
+view.tag.topcombination = "Top tag combinations"
 view.private = "Private"
 view.url = "URL"
 view.image = "Image"
@@ -122,12 +129,6 @@ stats.import.xml.help = "Single or multiple"
 stats.import.xml.file = "Choose a file"
 stats.import.xml.overwrite = "Overwrite existing"
 stats.import.xml.import = "Import"
-
-view.nav.all.tags = "Tags"
-view.nav.all.categories = "Categories"
-view.nav.back.home = "back home"
-view.nav.random = "Random link"
-
 stats.storage.clean.fail = "Something went wrong while storage cleaning"
 stats.import.missing.file = "Please provide a import file"
 stats.search.index.fail = "Something went wrong while search index update"
