@@ -72,6 +72,11 @@ home.input.new.link = "Neuen Link hinzufügen"
 home.input.search.found = "Ergebnisse gefunden."
 home.last.added = "Zuletzt hinzugefügt"
 
+view.nav.all.tags = "Tags"
+view.nav.all.categories = "Kategorien"
+view.nav.back.home = "zurück nach Hause"
+view.nav.random = "Zufallslink"
+
 view.name = "Name"
 view.new.name = "Neuer Name"
 view.deletion = "Löschung"
@@ -82,9 +87,11 @@ view.image.of.link = "Bild vom Link"
 view.image.link = "Bildverweis"
 view.categories = "Kategorien"
 view.category = "Kategorie"
+view.category.topcombination = "Top Kategorie Kombinationen"
 view.tag.help = "Eingabe eines Neuen oder Auswahl eines Bestehenden und danach Enter drücken."
 view.tag = "Tag"
 view.tags = "Tags"
+view.tag.topcombination = "Top Tag Kombinationen"
 view.private = "Privat"
 view.url = "URL"
 view.image = "Bild"
