@@ -1,4 +1,6 @@
-version 2.x -
+version 2.x - Dragon Chapel ()
+
+	+ Add top 5 tag or category relation stats in the tag and category overview
 
 version 2.8.1 - Deathwind Chapel (2022-12-31)
 
